objects/agf__Headcount__c.object
<CustomObject>
    <description>Prototype for T&amp;P Headcount Management functionality to be integrated into GUS</description>
    <fields>
        <fullName>agf__Backfill_Date__c</fullName>
        <description>If an employee is being backfilled, enter the expected date of departure.</description>
        <label>Backfill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Backfill_Name__c</fullName>
        <label>Backfill Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Cloud__c</fullName>
        <description>Defines the Cloud headcount is associated with</description>
        <label>Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>CCE/Site Reliability</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Data.com - San Francisco</fullName>
                </value>
                <value>
                    <fullName>Data.com - San Mateo</fullName>
                </value>
                <value>
                    <fullName>Database and Core</fullName>
                </value>
                <value>
                    <fullName>Data Center Automation</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Matrix</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Network and Systems Platform</fullName>
                </value>
                <value>
                    <fullName>Path-To-Production</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Platform - Declarative</fullName>
                </value>
                <value>
                    <fullName>Platform - Programmatic</fullName>
                </value>
                <value>
                    <fullName>Platform Programmatic UI</fullName>
                </value>
                <value>
                    <fullName>Platform - Services</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>R&amp;D App Delivery</fullName>
                </value>
                <value>
                    <fullName>Reliability</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Salesforce Cloud</fullName>
                </value>
                <value>
                    <fullName>Sayonara</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <inlineHelpText>Free-text area to record notes on this Headcount.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Effective_Date__c</fullName>
        <inlineHelpText>Effective quarter to hire headcount.  Only Finance can move headcount from quarter to quarter.</inlineHelpText>
        <label>Effective Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12-Q4</fullName>
                </value>
                <value>
                    <fullName>FY13-Q1</fullName>
                    <default>true</default>
                    <label>FY13-Q1</label>
                </value>
                <value>
                    <fullName>FY13-Q2</fullName>
                </value>
                <value>
                    <fullName>FY13-Q3</fullName>
                </value>
                <value>
                    <fullName>FY13-Q4</fullName>
                </value>
                <value>
                    <fullName>FY14-Q1</fullName>
                </value>
                <value>
                    <fullName>FY14-Q2</fullName>
                </value>
                <value>
                    <fullName>FY14-Q3</fullName>
                </value>
                <value>
                    <fullName>FY14-Q4</fullName>
                </value>
                <value>
                    <fullName>FY15-Q1</fullName>
                </value>
                <value>
                    <fullName>FY15-Q2</fullName>
                </value>
                <value>
                    <fullName>FY15-Q3</fullName>
                </value>
                <value>
                    <fullName>FY15-Q4</fullName>
                </value>
                <value>
                    <fullName>FY16-Q1</fullName>
                </value>
                <value>
                    <fullName>FY16-Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Employee_Name_Text__c</fullName>
        <description>A text copy of the Employee Name field necessary because lookup fields are not indexed and not searchable.  Only text, email and phone field types are searched:
https://help.salesforce.com/HTViewHelpDoc?id=search_fields_custom_object.htm&amp;language=en_US)</description>
        <label>Employee Name (Text)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Employee_Number_Text__c</fullName>
        <description>A text copy of the Employee Number field is necessary because lookup fields and formula fields based on lookups are not indexed and not searchable. Only text, email and phone field types are searched.</description>
        <label>Employee Number (Text)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__FY_Starting_Cloud__c</fullName>
        <label>FY Starting Cloud</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Headcount_Department__c</fullName>
        <inlineHelpText>Department can be entered manually by Finance, but will be auto-populated by the value from the User record in the Employee Name field (User Lookup) if available.</inlineHelpText>
        <label>Employee Department OLD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Headcount_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of employee filling the position (lookup to User)</inlineHelpText>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Headcounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Hiring_Manager_Department__c</fullName>
        <description>The department of the hiring manager, derived from the User record.</description>
        <formula>agf__Hiring_Manager__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hiring Manager Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hiring Manager for headcount</description>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Headcount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Initial_Status_Value__c</fullName>
        <label>Initial Status Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Canada - Remote</fullName>
                </value>
                <value>
                    <fullName>Canada - Toronto</fullName>
                </value>
                <value>
                    <fullName>CA - San Francisco</fullName>
                </value>
                <value>
                    <fullName>CA - San Mateo</fullName>
                </value>
                <value>
                    <fullName>CA - Santa Monica</fullName>
                </value>
                <value>
                    <fullName>California - Remote</fullName>
                </value>
                <value>
                    <fullName>Colorado - Remote</fullName>
                </value>
                <value>
                    <fullName>FL - Tampa</fullName>
                </value>
                <value>
                    <fullName>Florida - Remote</fullName>
                </value>
                <value>
                    <fullName>Georgia - Remote</fullName>
                </value>
                <value>
                    <fullName>Idaho - Remote</fullName>
                </value>
                <value>
                    <fullName>Illinois - Remote</fullName>
                </value>
                <value>
                    <fullName>Louisiana - Remote</fullName>
                </value>
                <value>
                    <fullName>Maine - Remote</fullName>
                </value>
                <value>
                    <fullName>Massachusetts - Remote</fullName>
                </value>
                <value>
                    <fullName>New Hampshire - Remote</fullName>
                </value>
                <value>
                    <fullName>New Jersey - Remote</fullName>
                </value>
                <value>
                    <fullName>New York - Remote</fullName>
                </value>
                <value>
                    <fullName>North Carolina - Remote</fullName>
                </value>
                <value>
                    <fullName>NY - New York</fullName>
                </value>
                <value>
                    <fullName>Ohio - Remote</fullName>
                </value>
                <value>
                    <fullName>Oregon - Remote</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania - Remote</fullName>
                </value>
                <value>
                    <fullName>Texas - Remote</fullName>
                </value>
                <value>
                    <fullName>VA - Reston</fullName>
                </value>
                <value>
                    <fullName>WA - Seattle</fullName>
                </value>
                <value>
                    <fullName>Washington - Remote</fullName>
                </value>
                <value>
                    <fullName>India - Hyderabad</fullName>
                </value>
                <value>
                    <fullName>France - Paris</fullName>
                </value>
                <value>
                    <fullName>Sweden - Stockholm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Manager_IC__c</fullName>
        <description>Used to distinguish Managers from ICs</description>
        <label>Manager/IC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Manager_Status__c</fullName>
        <description>Manager&apos;s -GYR signal for recruiting status on this position.</description>
        <inlineHelpText>Blank: no activity on this position 
Green: Likely to close within the assigned quarter 
Yellow: May close within the assigned quarter but I&apos;m not confident 
Red: Unlikely to close within assigned quarter
Blue: May close before assigned quarter</inlineHelpText>
        <label>Manager Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Manager_Update__c</fullName>
        <description>Text description of Manager Status</description>
        <inlineHelpText>Enter your update here for hiring status on this position. Do not include confidential information.</inlineHelpText>
        <label>Manager Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Organization__c</fullName>
        <description>Functional Organization</description>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCE</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>IT Apps</fullName>
                </value>
                <value>
                    <fullName>IT Infra</fullName>
                </value>
                <value>
                    <fullName>PerfEng</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>QE</fullName>
                </value>
                <value>
                    <fullName>SOMA</fullName>
                </value>
                <value>
                    <fullName>T&amp;P Shared</fullName>
                </value>
                <value>
                    <fullName>TechOps</fullName>
                </value>
                <value>
                    <fullName>TPL</fullName>
                </value>
                <value>
                    <fullName>TPM</fullName>
                </value>
                <value>
                    <fullName>UX</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Original_Effective_Date__c</fullName>
        <description>Stores the original Effective Date when a position is created</description>
        <label>Original Effective Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Recruiter_Status__c</fullName>
        <description>Recruiter&apos;s -GYR signal for recruiting status on this position.</description>
        <inlineHelpText>Blank: no activity on this position 
Green: Likely to close within the assigned quarter 
Yellow: May close within the assigned quarter but I&apos;m not confident 
Red: Unlikely to close within assigned quarter
Blue: May close before assigned quarter</inlineHelpText>
        <label>Recruiter Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Recruiter_Update__c</fullName>
        <description>Text description of Recruiter Status</description>
        <inlineHelpText>Enter your update here for hiring status on this position. Do not include confidential information.</inlineHelpText>
        <label>Recruiter Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Roster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Region__c</fullName>
        <inlineHelpText>Region is set by Finance.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas - Canada</fullName>
                </value>
                <value>
                    <fullName>Americas - USA</fullName>
                </value>
                <value>
                    <fullName>APAC - All Countries</fullName>
                </value>
                <value>
                    <fullName>EMEA - All Countries</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Capacity Planner</fullName>
                </value>
                <value>
                    <fullName>CCE</fullName>
                </value>
                <value>
                    <fullName>Data Center Engineer</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Executive Assistant</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Network Engineer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Performance Engineer</fullName>
                </value>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
                <value>
                    <fullName>Product Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Provisioning Specialist / Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Quality Engineer</fullName>
                </value>
                <value>
                    <fullName>Release Engineer</fullName>
                </value>
                <value>
                    <fullName>Security Engineer</fullName>
                </value>
                <value>
                    <fullName>Site Reliability Engineer</fullName>
                </value>
                <value>
                    <fullName>Storage Engineer</fullName>
                </value>
                <value>
                    <fullName>Systems Engineer</fullName>
                </value>
                <value>
                    <fullName>Technical Writer</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                </value>
                <value>
                    <fullName>UX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Signal__c</fullName>
        <description>Only records showing green are open for hiring. Records showing yellow may become open again, but currently are not open.</description>
        <formula>IMAGE(
CASE( agf__Status__c ,
&quot;Open - New&quot;, &quot;/img/samples/color_green.gif&quot;,
&quot;Open - Backfill&quot;, &quot;/img/samples/color_green.gif&quot;,
&quot;Offer in Progress&quot;, &quot;/img/samples/color_yellow.gif&quot;,
&quot;Offer Accepted&quot;, &quot;/img/samples/color_yellow.gif&quot;,
&quot;Filled&quot;, &quot;/img/samples/color_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;,15,30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only records showing green are open for hiring. Records showing yellow may become open again, but currently are not open.</inlineHelpText>
        <label>Offer Signal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Source_Description__c</fullName>
        <description>A place for notes related to the source field.</description>
        <inlineHelpText>A place for notes related to the source field.</inlineHelpText>
        <label>Source Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Transfer In</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <inlineHelpText>Open - New = New position added by Finance
Open - Backfill = Existing position available for Backfill
Offer - In Progress = Offer extended to candidate
Offer - Accepted = Offer accepted by candidate
Filled = Position filled by an employee</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open - New</fullName>
                    <default>true</default>
                    <label>Open - New</label>
                </value>
                <value>
                    <fullName>Open - Backfill</fullName>
                </value>
                <value>
                    <fullName>Offer In Progress</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Talentforce_Offer__c</fullName>
        <inlineHelpText>Reference to Job ID in Talentorce, entered by Recruiting.</inlineHelpText>
        <label>Job ID</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Target_Start_Date__c</fullName>
        <inlineHelpText>Target start date for candidates that have accepted an offer</inlineHelpText>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Scrum Team assigned to the position.</inlineHelpText>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipName>Headcount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__via__c</fullName>
        <label>via</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Hire</fullName>
                </value>
                <value>
                    <fullName>Reciprocated Opportunity Open Market</fullName>
                </value>
                <value>
                    <fullName>Reciprocated Transfer</fullName>
                </value>
                <value>
                    <fullName>Left T&amp;P</fullName>
                </value>
                <value>
                    <fullName>Unreciprocated Opportunity Open Market</fullName>
                </value>
                <value>
                    <fullName>Unreciprocated Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <columns>agf__Organization__c</columns>
        <columns>agf__Headcount_Department__c</columns>
        <columns>agf__Cloud__c</columns>
        <columns>agf__Team__c</columns>
        <columns>agf__Backfill_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__All_Headcount_for_XAP</fullName>
        <columns>NAME</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Role__c</columns>
        <columns>agf__Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Headcount for XAP</label>
    </listViews>
    <listViews>
        <fullName>agf__All_TP</fullName>
        <columns>NAME</columns>
        <columns>agf__Effective_Date__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Cloud__c</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Team__c</columns>
        <columns>agf__Organization__c</columns>
        <columns>agf__Role__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All T&amp;P</label>
    </listViews>
    <listViews>
        <fullName>agf__Doc</fullName>
        <columns>NAME</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <columns>agf__Effective_Date__c</columns>
        <columns>agf__Region__c</columns>
        <columns>agf__Cloud__c</columns>
        <columns>agf__Role__c</columns>
        <columns>agf__Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Hiring_Manager__c</field>
            <operation>equals</operation>
            <value>Andrea Leszek,Dean Atchison</value>
        </filters>
        <label>Doc</label>
    </listViews>
    <listViews>
        <fullName>agf__Gaurav_Chawla</fullName>
        <columns>NAME</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Effective_Date__c</columns>
        <columns>agf__Cloud__c</columns>
        <columns>agf__Location__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Hiring_Manager__c</field>
            <operation>equals</operation>
            <value>Gaurav Chawla</value>
        </filters>
        <label>Gaurav Chawla</label>
    </listViews>
    <listViews>
        <fullName>agf__Greg_Davis</fullName>
        <columns>agf__Status__c</columns>
        <columns>NAME</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Headcount_Department__c</columns>
        <columns>agf__Candidate_Name__c</columns>
        <columns>agf__Effective_Date__c</columns>
        <columns>agf__Cloud__c</columns>
        <columns>agf__Location__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Hiring_Manager__c</field>
            <operation>equals</operation>
            <value>Greg Davis</value>
        </filters>
        <label>Greg Davis</label>
    </listViews>
    <listViews>
        <fullName>agf__Performance_Engineering</fullName>
        <columns>agf__Cloud__c</columns>
        <columns>NAME</columns>
        <columns>agf__Backfill_Date__c</columns>
        <columns>agf__Backfill_Name__c</columns>
        <columns>agf__Candidate_Name__c</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Effective_Date__c</columns>
        <columns>agf__Headcount_Department__c</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <columns>agf__Talentforce_Offer__c</columns>
        <columns>agf__Region__c</columns>
        <columns>agf__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Headcount_Department__c</field>
            <operation>startsWith</operation>
            <value>126</value>
        </filters>
        <filters>
            <field>agf__Status__c</field>
            <operation>equals</operation>
            <value>Open - New,Open - Backfill,Offer In Progress,Offer Accepted</value>
        </filters>
        <label>Performance Engineering</label>
    </listViews>
    <listViews>
        <fullName>agf__Phil</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>agf__Cloud__c</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <columns>agf__Headcount_Department__c</columns>
        <columns>agf__Role__c</columns>
        <columns>agf__Organization__c</columns>
        <columns>agf__Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Hiring_Manager__c</field>
            <operation>equals</operation>
            <value>Jimin Kang,Michael Wilburn,Mark Nelson,Phil Waligora,Sireesh Bodireddygari</value>
        </filters>
        <filters>
            <field>agf__Hiring_Manager__c</field>
            <operation>equals</operation>
            <value>Ritu Ganguly,Dan Soble,Travis Corson,Raja Bhamidipati,Srikanth Yendluri</value>
        </filters>
        <filters>
            <field>agf__Hiring_Manager__c</field>
            <operation>equals</operation>
            <value>Greg Davis</value>
        </filters>
        <label>UAT</label>
    </listViews>
    <listViews>
        <fullName>agf__Platform_Headcount</fullName>
        <columns>NAME</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Backfill_Name__c</columns>
        <columns>agf__Candidate_Name__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <columns>agf__Organization__c</columns>
        <columns>agf__Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Cloud__c</field>
            <operation>equals</operation>
            <value>Platform</value>
        </filters>
        <label>Platform Headcount</label>
    </listViews>
    <listViews>
        <fullName>agf__User_Experience</fullName>
        <columns>NAME</columns>
        <columns>agf__Cloud__c</columns>
        <columns>agf__Backfill_Name__c</columns>
        <columns>agf__Backfill_Date__c</columns>
        <columns>agf__Candidate_Name__c</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Effective_Date__c</columns>
        <columns>agf__Headcount_Department__c</columns>
        <columns>agf__Headcount_Name__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <columns>agf__Talentforce_Offer__c</columns>
        <columns>agf__Region__c</columns>
        <columns>agf__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Headcount_Department__c</field>
            <operation>startsWith</operation>
            <value>131</value>
        </filters>
        <filters>
            <field>agf__Status__c</field>
            <operation>equals</operation>
            <value>Open - New,Open - Backfill,Offer In Progress,Offer Accepted</value>
        </filters>
        <label>User Experience</label>
    </listViews>
</CustomObject>